--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+.container {
+  position: relative;
+  width: 100%;
+}
+
 .search {
   margin: 0 auto;
-  width: 960px;
-
+  width: 50%;
 }
 
 .logo_img {
