--- a/style.css
+++ b/style.css
@@ -1,10 +1,41 @@
+body {
+  font-size: 12px;
+  font-family: Arial, serif;
+  color: rgba(0,0,0,0.87);
+}
+
+.nav {
+  float: right;
+  padding-top: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(0,0,0,0.87);
+
+}
+
+.nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 30px;
+}
+
+.nav ul li {
+  display: inline;
+  padding: 5px;
+}
+
 .container {
+  clear: right;
   width: 960px;
   margin: auto;
   text-align: center;
   text-align: -moz-center;
   text-align: -webkit-center;
   vertical-align: middle;
+  padding-top: 112px;
 }
 
 .logo {
@@ -22,4 +53,6 @@
 
 .button {
   display: inline-block;
+  padding: 0 8px;
+  margin: 11px 8px;
 }
