--- a/style.css
+++ b/style.css
@@ -11,8 +11,11 @@ body {
 
 a {
   text-decoration: none;
-  color: rgba(0,0,0,0.87);
+  color: #404040;
+}
 
+a:hover {
+  text-decoration: underline;
 }
 
 .nav ul {
@@ -56,3 +59,25 @@ a {
   padding: 0 8px;
   margin: 11px 8px;
 }
+
+.footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 30px;
+}
+
+.footer ul li {
+  display: inline;
+  padding: 5px;
+}
+
+.footer_right {
+  float: right;
+}
+
+.footer_left {
+  float: left;
+}
+
+
