--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 .nav {
   float: right;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
 a {
@@ -46,6 +46,7 @@ a:hover {
   background-size: 269px 95px;
   width: 269px;
   height: 95px;
+  padding-bottom: 20px;
 }
 
 .search_text {
@@ -63,17 +64,27 @@ a:hover {
 .footer ul {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 10px 0 0 0;
   height: 30px;
+}
+
+.footer {
+  width: 99%;
+  position: absolute;
+  bottom: 0px;
+  background-color: #f2f2f2;
+  border: 1px 0 0 0 solid black;
+  display: inline-block;
 }
 
 .footer ul li {
   display: inline;
-  padding: 5px;
+  padding: 10px;
 }
 
 .footer_right {
-  float: right;
+  position: absolute;
+  right: 20px;
 }
 
 .footer_left {
